--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,10 @@ spring:
   application.name: splearn
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
+logging:
+  level:
+    org.hibernate: DEBUG
+    org.springframework.orm.jpa: DEBUG
+    org.springframework.boot.autoconfigure.orm.jpa: DEBUG
