--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-logging:
-  level:
-    org.hibernate: DEBUG
-    org.springframework.orm.jpa: DEBUG
-    org.springframework.boot.autoconfigure.orm.jpa: DEBUG
+#logging:
+#  level:
+#    org.hibernate: DEBUG
+#    org.springframework.orm.jpa: DEBUG
+#    org.springframework.boot.autoconfigure.orm.jpa: DEBUG
